   1.7.4 - ?????
         added yang2dsdl -x to try to translate 1.1 modules

   1.7.3 - 2017-06-27
         #318 - handle multiple rc:yang-data statements.
                this bug caused validation of ietf-restconf, or any
                module that imported ietf-restconf, to fail.

   1.7.2 - 2017-06-14
         added support for external plugins, using setuptools entry_points
         added a warning for unsafe escape sequences in double quoted
           strings.
         added --lax-quote-checks to turn of the warning for unsafe
           escape sequences.
         added restconf plugin
         added --tree-print-yang-data
         print anydata/anyxml better in tree diagrams
         grammar fix; "must" not allowed in "case"

         pr:248 replace newlines in typestrings with spaces in UML,
                thanks to William Lupton
         pr:281 added --jstree-path, thanks to Ralph Schmieder
         pr:289 added plugins for bbf, ieee, and mef, thanks to
                Mahesh Jethanandani
         pr:312 ignore actions when generating sample XML, thanks to
                William Lupton
         pr:313 corrected --tree-help output, thanks to lifeunleaded

         #278 - handle unprefixed leafref paths in jsonxsl.py
         #284 - removed broken error message for 'when' on key leafs
         #285 - handle illegal integer strings
         #297 - corrected translation of empty container with extension
                statement in DSDL
         #300 - handle unknown extensions in deviation
         #301 - fix bug w/ refine of leafref leaf
         #310 - when using the windows command prompt, "pyang" was not
                found, thanks to Mallikarjunarao Kosuri


   1.7.1 - 2016-11-02
         added support for RFC 7952, metadata annotations
         added --tree-max-length option

         #126 - correctly validate implicitly added YIN files
         #218 - do not copy if-feature to augment children