@@ -106,6 +106,11 @@ Validates the YANG module in <filename> (or stdin), and all its dependencies."""
                              action="append",
                              help="Features to support, default all. " \
                              "<modname>:[<feature>,]*"),
+        optparse.make_option("", "--max-status",
+                             metavar="MAXSTATUS",
+                             dest="max_status",
+                             help="Max status to support, one of: " \
+                             "current, deprecated, obsolete"),
         optparse.make_option("", "--deviation-module",
                              metavar="DEVIATION",
                              dest="deviations",
@@ -228,6 +233,7 @@ Validates the YANG module in <filename> (or stdin), and all its dependencies."""
     ctx.lax_xpath_checks = o.lax_xpath_checks
     ctx.lax_quote_checks = o.lax_quote_checks
     ctx.strict = o.strict
+    ctx.max_status = o.max_status
 
     # make a map of features to support, per module
     if o.hello:
